# ffmpeg-kit-builders

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  android.sh  apple.sh  ios.sh  linux.sh  macos.sh  meson-cross.mingw.txt  tvos.sh  windows.sh
android/: .gitignore  README.md  settings.gradle
android/ffmpeg-kit-android-lib/: Doxyfile  build.gradle  consumer-rules.pro
android/ffmpeg-kit-android-lib/src/main/cpp/: .gitignore  android_lts_support.c  ffmpegkit.c  ffmpegkit.h  ffmpegkit_abidetect.c  ffmpegkit_abidetect.h  ffprobekit.c  ffprobekit.h  fftools_cmdutils.c  fftools_ffmpeg.c  fftools_ffmpeg_mux.c  fftools_ffmpeg_mux_init.c  fftools_objpool.c  fftools_opt_common.c
android/ffmpeg-kit-android-lib/src/main/java/com/arthenica/ffmpegkit/: Abi.java  AbiDetect.java  AbstractSession.java  AsyncFFmpegExecuteTask.java  AsyncFFprobeExecuteTask.java  Chapter.java  (+26 more)
android/jni/: .gitignore  Android.mk
android/jni/cpu-features/: Android.mk
android/jni/ffmpeg/: Android.mk
android/jni/ffmpeg/neon/: Android.mk
apple/: .gitignore  Doxyfile  Makefile.am  README.md  aclocal.m4  configure.ac
apple/src/: AbstractSession.m  ArchDetect.m  AtomicLong.m  Chapter.m  FFmpegKit.m  FFmpegKitConfig.m  FFmpegSession.m  FFprobeKit.m  FFprobeSession.m  Log.m  Makefile.am  Makefile.in  MediaInformation.m  MediaInformationJsonParser.m  MediaInformationSession.m  Packages.m  ReturnCode.m  Statistics.m  StreamInformation.m  ffmpegkit_exception.m  fftools_cmdutils.c  fftools_ffmpeg_filter.c  fftools_opt_common.h  fftools_sync_queue.c
flutter/flutter/android/: build.gradle
flutter/flutter/ios/: ffmpeg_kit_flutter.podspec
flutter/flutter_platform_interface/: .gitignore  CHANGELOG.md  LICENSE  README.md  pubspec.yaml
flutter/flutter_platform_interface/lib/: ffmpeg_kit_flutter_platform_interface.dart  method_channel_ffmpeg_kit_flutter.dart
linux/: Doxyfile  Makefile.am  README.md  configure.ac
linux/src/: .gitignore  AbstractSession.h  ArchDetect.h  Chapter.cpp  Chapter.h  FFmpegKit.cpp  FFmpegKit.h  FFmpegKitConfig.cpp  FFmpegKitConfig.h  FFmpegSessionCompleteCallback.h  FFprobeKit.h  FFprobeSession.cpp  FFprobeSession.h  FFprobeSessionCompleteCallback.h  Level.h  Log.h  LogCallback.h  Makefile.am  Makefile.in  MediaInformation.cpp  MediaInformation.h  MediaInformationJsonParser.cpp  MediaInformationJsonParser.h  MediaInformationSession.cpp  MediaInformationSession.h  Packages.cpp  Packages.h  Session.h  SessionState.h  Statistics.cpp  Statistics.h  StatisticsCallback.h  StreamInformation.cpp  StreamInformation.h  ffmpegkit_exception.cpp  ffmpegkitconfig.h  fftools_ffmpeg.h  fftools_ffmpeg_filter.c  fftools_ffprobe.c  fftools_thread_queue.c
react-native/: README.md  ffmpeg-kit-react-native.podspec  package.json
react-native/android/: build.gradle  gradle.properties
react-native/android/src/main/: AndroidManifest.xml
react-native/ios/: FFmpegKitReactNativeModule.h  FFmpegKitReactNativeModule.m
react-native/src/: index.d.ts  index.js
scripts/: extract_licenses.sh  function-android.sh  function-apple.sh  function-ios.sh  function-linux.sh  function-macos.sh  function-tvos.sh  function-windows.sh  function.sh  main-android.sh  main-ios.sh  main-linux.sh  main-macos.sh  main-tvos.sh  main-windows.sh  relocate_directory.sh  run-android.sh  run-apple.sh  run-linux.sh  run-windows.sh  source-windows.sh  source.sh  update_sources.sh  variable.sh  windows-libraries.txt
scripts/android/: chromaprint.sh  dav1d.sh  expat.sh  ffmpeg.sh  fontconfig.sh  freetype.sh  fribidi.sh  giflib.sh  gmp.sh  gnutls.sh  harfbuzz.sh  jpeg.sh  kvazaar.sh  lame.sh  leptonica.sh  libaom.sh  libass.sh  libiconv.sh  libilbc.sh  libogg.sh  libpng.sh  libsamplerate.sh  libsndfile.sh  libtheora.sh  libuuid.sh  libvidstab.sh  libvorbis.sh  libvpx.sh  libwebp.sh  libxml2.sh  nettle.sh  opencore-amr.sh  openh264.sh  openssl.sh  opus.sh  rubberband.sh  sdl.sh  shine.sh  snappy.sh  soxr.sh  (+10 more)
scripts/apple/: chromaprint.sh  dav1d.sh  expat.sh  ffmpeg-kit.sh  ffmpeg.sh  fontconfig.sh  freetype.sh  fribidi.sh  giflib.sh  gmp.sh  gnutls.sh  harfbuzz.sh  jpeg.sh  kvazaar.sh  lame.sh  leptonica.sh  libaom.sh  libass.sh  libilbc.sh  libogg.sh  libpng.sh  libsamplerate.sh  libsndfile.sh  libtheora.sh  libvidstab.sh  libvorbis.sh  libvpx.sh  libwebp.sh  libxml2.sh  nettle.sh  opencore-amr.sh  openh264.sh  openssl.sh  opus.sh  rubberband.sh  sdl.sh  shine.sh  snappy.sh  soxr.sh  speex.sh  (+9 more)
scripts/linux/: chromaprint.sh  dav1d.sh  ffmpeg-kit.sh  ffmpeg.sh  kvazaar.sh  libaom.sh  libilbc.sh  openh264.sh  openssl.sh  srt.sh  x264.sh  zimg.sh
scripts/windows/: ffmpeg-kit.sh  ffmpeg.sh  windows-libs.json
scripts/windows/patches/: fix_libplacebo_absolute_path.patch  mingw-w64-build.bak
tools/: clean.sh
tools/android/: build.gradle  build.lts.gradle
tools/patch/cmake/x265/: CMakeLists.txt
tools/patch/make/giflib/: Makefile.am  configure.ac
tools/patch/make/libvpx/: configure.sh  configure.x86_64_mac_catalyst.sh
tools/patch/make/nettle/: aclocal.m4
tools/patch/make/rubberband/: Makefile.android.in  Makefile.ios.in  configure.ac  rubberband.pc.in
tools/patch/make/sdl/: configure.in
tools/protocols/: libavformat_file.c  libavutil_file.c  libavutil_file.h
windows/: .gitignore  Doxyfile  Makefile.am  aclocal.m4  configure.ac
windows/m4/: ax_cxx_compile_stdcxx.m4
windows/src/: .gitignore  AbstractSession.cpp  ArchDetect.cpp  ArchDetect.h  Chapter.cpp  Chapter.h  FFmpegKit.cpp  FFmpegKit.h  FFmpegKitConfig.cpp  FFmpegSession.cpp  FFmpegSession.h  FFprobeKit.cpp  FFprobeKit.h  FFprobeSession.cpp  Level.h  Log.cpp  LogCallback.h  LogRedirectionStrategy.h  Makefile.am  Makefile.in  MediaInformation.cpp  MediaInformationJsonParser.cpp  MediaInformationJsonParser.h  MediaInformationSession.cpp  MediaInformationSession.h  MediaInformationSessionCompleteCallback.h  ReturnCode.cpp  ReturnCode.h  Session.h  SessionState.h  Signal.h  Statistics.cpp  Statistics.h  StatisticsCallback.h  StreamInformation.cpp  StreamInformation.h  ffmpegkit_exception.h  fftools_ffmpeg.c  fftools_ffmpeg.h  fftools_ffmpeg_demux.c  (+4 more)
(+11 files in other folders)
